--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <html>
-
+  <head>
+    <title>Rock, Paper, Scissors</title>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 <body>
     <h1>ROCK, PAPER, SCISSORS</h1>
 </body>
