--- a/index.html
+++ b/index.html
@@ -5,10 +5,48 @@
     <title>Rock, Paper, Scissors</title>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="index.js" defer></script>
 <body>
     <h1>ROCK, PAPER, SCISSORS</h1>
+
+    <div id="choices">
+      <button id="rock">
+        <img src="images/rock.png" alt="rock">
+      </button>
+      <button id="paper">
+        <img src="images/paper.png" alt="paper">
+      </button>
+      <button id="scissors">
+        <img src="images/scissors.png" alt="scissors">
+      </button>
+    </div>
+
+    <div id="score">
+      <table id="result-table">
+        <thead>
+          <tr>
+            <th>Player</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Player 1</td>
+            <td id="p1-score">0</td>
+          </tr>
+          <tr>
+            <td>Player 2 (AI)</td>
+            <td id="p2-score">0</td>
+          </tr>
+          <tr>
+            <td>Ties</td>
+            <td id="tie-score">0</td>
+          </tr>
+        </tbody>
+        <tr></tr>
+      </table>
+    </div>
 </body>
 
-<script src='./index.js'></script>
 
 </html>
